# foris-controller-pakon-module

./: .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
foris_controller_backends/pakon/: __init__.py
foris_controller_modules/pakon/: __init__.py
foris_controller_modules/pakon/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/pakon/schema/: pakon.json
foris_controller_pakon_module/: __init__.py
tests/: __init__.py  conftest.py  fixtures.py  test_pakon.py
tests/ubus-acl/: pakon.json
