[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foris-controller-pakon-module"
dynamic = ["version"]
description = "Pakon module for foris-controller"
readme = "README.rst"
license = "GPL-3.0-only"
authors = [
    { name = "CZ.NIC, z.s.p.o. (https://www.nic.cz/)", email = "packaging@turris.cz" },
]
dependencies = [
    "foris-controller",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt",
]
tests = [
    "pytest",
    "ubus",
    "paho-mqtt",
    "foris-client",
    "foris-controller-testtools",
]
ubus = [
    "ubus",
]

[tool.hatch.version]
path = "foris_controller_pakon_module/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_pakon_module",
]

[tool.hatch.build.targets.wheel]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_pakon_module",
]
